--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -1,7 +1,5 @@
-
 fastapi==0.115.0
 uvicorn[standard]==0.30.0
-pytest==8.3.2
+gunicorn==21.2.0
 pydantic-settings==2.3.4
 python-dotenv==1.0.1
-httpx==0.27.2
